fix spacing jump

--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,11 @@ rux-notification::part(container) {
   border: 1px solid var(--color-border-interactive-muted);
 }
 
+.constellation rux-icon  {
+  vertical-align: middle;
+  width: 32px;
+}
+
 .constellation .visible {
   visibility: visible; 
 }
